--- a/package.json
+++ b/package.json
@@ -33,28 +33,28 @@
   "devDependencies": {
     "@types/fs-extra": "^8",
     "@types/node": "^14.17.0",
-    "@typescript-eslint/eslint-plugin": "*",
-    "@typescript-eslint/parser": "*",
-    "eslint": "*",
-    "eslint-import-resolver-node": "*",
-    "eslint-import-resolver-typescript": "*",
-    "eslint-plugin-import": "*",
-    "fs-extra": "*",
-    "jsii": "*",
-    "jsii-diff": "*",
-    "jsii-docgen": "*",
-    "jsii-pacmak": "*",
-    "json-schema": "*",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.24.2",
+    "fs-extra": "^10.0.0",
+    "jsii": "^1.34.0",
+    "jsii-diff": "^1.34.0",
+    "jsii-docgen": "^3.6.3",
+    "jsii-pacmak": "^1.34.0",
+    "json-schema": "^0.3.0",
     "npm-check-updates": "^11",
-    "projen": "*",
+    "projen": "^0.28.26",
     "standard-version": "^9",
-    "typescript": "*"
+    "typescript": "^4.4.3"
   },
   "peerDependencies": {
-    "projen": "*"
+    "projen": "^0.28.26"
   },
   "dependencies": {
-    "projen": "*"
+    "projen": "^0.28.26"
   },
   "bundledDependencies": [],
   "main": "lib/index.js",
